[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audio-classifier-visualizer"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
#license = "MIT"
keywords = []
authors = [
  { name = "Ron M", email = "ramayer+git@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "duckdb",
  "einx",
  #"einops>=0.7.0",
  "librosa>=0.11.0rc0",
  "matplotlib",
  "scikit-learn",
  "tbb",
  # (torchaudio.io 's apis changed in torchaudio2.9 - transition to torchcodec)
  #"torch",
  #"torchaudio",
  "pandas",
  "ssqueezepy",
]

[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
Documentation = "https://github.com/Ron M/audio-classifier-visualizer#readme"
Issues = "https://github.com/Ron M/audio-classifier-visualizer/issues"
Source = "https://github.com/Ron M/audio-classifier-visualizer"

[project.optional-dependencies]
test = [
  "elephant-rumble-inference @ git+https://github.com/ramayer/elephant-rumble-inference@v0.9.0-rc1",
  "pandas"
]
cuda12 = [
  "cupy-cuda12x"
]

[tool.hatch.envs.hatch-test]
features = [
  "test"
]

[tool.hatch.version]
path = "src/audio_classifier_visualizer/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/audio_classifier_visualizer tests}"

[tool.coverage.run]
source_pkgs = ["audio_classifier_visualizer", "tests"]
branch = true
parallel = true
omit = [
  "src/audio_classifier_visualizer/__about__.py",
]

[tool.coverage.paths]
audio_classifier_visualizer = ["src/audio_classifier_visualizer", "*/audio-classifier-visualizer/src/audio_classifier_visualizer"]
tests = ["tests", "*/audio-classifier-visualizer/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.envs.test.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov {args:tests}"

[tool.ruff.lint.extend-per-file-ignores]
"src/audio_classifier_visualizer/main.py"= ["T201"]
"tests/*" = [
  "T201", # print() is acceptable in tests
]
"src/*" = [
  "G004", # f-strings are the most convenient for many log messages
]

[tool.hatch.build.targets.sdist]
include = [
  "pkg/*.py",
  "/tests",
]
exclude = [
  "*.json",
  "pkg/_compat.py",
  "/notebooks"
]
